--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Oxygen Shop</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 
 
 <body>
     <header class="header">
-        <h1 class="header__logo">OXYGEN Shop</h1>
+        <h1 class="header__logo">OXYGENShop</h1>
         <button class="header__button__hamburger"><img src="resources\svg\Menu.svg" alt="Hamburger Menu"></button>
         <nav class="header__nav">
             <ul class="header__nav__list">
@@ -21,22 +22,23 @@
                 <li class="header__nav__list__list__item"><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <hr class="header__hr">
     </header>
-    <section>
-        <h1>Sell More!</h1>
-        <p>Open shop on our platform and increase your sales.</p>
-        <button>Open your shop</button>
-        <img src="resources\img\computer.png" alt="computer image">
-        <h2>The most popular sales platform in country</h2>
-        <img src="resources\svg\Person2.svg" alt="Person Icon">
-        <img src="resources\svg\Eye2.svg" alt="Eye Icon">
-        <img src="resources\svg\Catalog2.svg" alt="Catalog Icon">
-        <p>100000+</p>
-        <p>2000000+</p>
-        <p>10000+</p>
-        <p>dayli entries</p>
-        <p>seen products every day</p>
-        <p>added posts daily</p>
+    <section class="section__marketing">
+        <h1 class="section__marketing__h1">Sell More!</h1>
+        <p class="section__marketing__p">Open shop on our platform and increase your sales.</p>
+        <button class="section__marketing__btn">Open your shop</button>
+        <img class="section__marketing__img" src="resources\img\computer.png" alt="computer image">
+        <h2 class="section__marketing__h2">The most popular sales platform in country</h2>
+        <img class="section__marketing__img" src="resources\svg\Person2.svg" alt="Person Icon">
+        <img class="section__marketing__img" src="resources\svg\Eye2.svg" alt="Eye Icon">
+        <img class="section__marketing__img" src="resources\svg\Catalog2.svg" alt="Catalog Icon">
+        <p class="section__marketing__p-1">100000+</p>
+        <p class="section__marketing__p-2">2000000+</p>
+        <p class="section__marketing__p-3">10000+</p>
+        <p class="section__marketing__p-3">daily entries</p>
+        <p class="section__marketing__p-3">seen products every day</p>
+        <p class="section__marketing__p-3">added posts daily</p>
     </section>
     <section>
         <div class="first-frame">
