Advanced project and optimized.

--- a/index.html
+++ b/index.html
@@ -29,17 +29,41 @@
         <p class="section__marketing__p">Open shop on our platform and increase your sales.</p>
         <button class="section__marketing__btn">Open your shop</button>
         <img class="section__marketing__img" src="resources\img\computer.png" alt="computer image">
-        <h2 class="section__marketing__h2">The most popular sales platform in country</h2>
-        <img class="section__marketing__img" src="resources\svg\Person2.svg" alt="Person Icon">
-        <img class="section__marketing__img" src="resources\svg\Eye2.svg" alt="Eye Icon">
-        <img class="section__marketing__img" src="resources\svg\Catalog2.svg" alt="Catalog Icon">
-        <p class="section__marketing__p-1">100000+</p>
-        <p class="section__marketing__p-2">2000000+</p>
-        <p class="section__marketing__p-3">10000+</p>
-        <p class="section__marketing__p-3">daily entries</p>
-        <p class="section__marketing__p-3">seen products every day</p>
-        <p class="section__marketing__p-3">added posts daily</p>
     </section>
+    <section>
+        <h2 class="section__marketing__containerh2__h2">The most popular sales platform in country</h2>
+        <div class="section__marketing__ellipse__div__red">
+            <div class="section__marketing__ellipse__div__red__box">
+                <div class="section__marketing__ellipse__div__red--ellipse"></div>
+                <img class="section__marketing__ellipse__div__red__icon__box__icon" alt="Person Icon">
+            </div>
+            <div class="section__marketing__ellipse__div__red__numberEntries__box">
+                <p class="section__marketing__ellipse__div__red__numberEntries--p1">1 0 0 0 0 0+</p>
+                <p class="section__marketing__ellipse__div__red__numberEntries--p2">daily entries</p>
+            </div>
+        </div>
+        <div class="section__marketing__ellipse__div__blue">
+            <div class="section__marketing__ellipse__div__blue__box">
+                <div class="section__marketing__ellipse__div__blue--ellipse2"></div>
+                <img class="section__marketing__ellipse__div__blue__icon__box__icon" alt="Eye Icon">
+            </div>
+            <div class="section__marketing__ellipse__div__blue__numberEntries__box">
+                <p class="section__marketing__ellipse__div__blue__numberEntries--p1">2 0 0 0 0 0 0 +</p>
+                <p class="section__marketing__ellipse__div__blue__numberEntries--p2">seen products every day</p>
+            </div>
+        </div>
+        <div class="section__marketing__ellipse__div__green">
+            <div class="section__marketing__ellipse__div__green__box">
+                <div class="section__marketing__ellipse__div__green--ellipse3"></div>
+                <img class="section__marketing__ellipse__div__green__icon__box__icon" alt="Catalog Icon">
+            </div>
+            <div class="section__marketing__ellipse__div__green__numberEntries__box">
+                <p class="section__marketing__ellipse__div__green__numberEntries--p1">1 0 0 0 0 +</p>
+                <p class="section__marketing__ellipse__div__green__numberEntries--p2">added posts daily</p>
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="first-frame">
             <h2>Be always first</h2>
