Frames section mobile done

--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
             <div class="section__marketing__ellipse__div__red__box">
                 <div class="section__marketing__ellipse__div__red--ellipse"></div>
                 <img class="section__marketing__ellipse__div__red__icon__box__icon" alt="Person Icon">
-            </div>
-            <div class="section__marketing__ellipse__div__red__numberEntries__box">
+                <br><br><br><br><br>
                 <p class="section__marketing__ellipse__div__red__numberEntries--p1">1 0 0 0 0 0+</p>
                 <p class="section__marketing__ellipse__div__red__numberEntries--p2">daily entries</p>
+
             </div>
         </div>
         <div class="section__marketing__ellipse__div__blue">
             <div class="section__marketing__ellipse__div__blue__box">
                 <div class="section__marketing__ellipse__div__blue--ellipse2"></div>
                 <img class="section__marketing__ellipse__div__blue__icon__box__icon" alt="Eye Icon">
-            </div>
-            <div class="section__marketing__ellipse__div__blue__numberEntries__box">
+                <br><br><br><br><br>
                 <p class="section__marketing__ellipse__div__blue__numberEntries--p1">2 0 0 0 0 0 0 +</p>
                 <p class="section__marketing__ellipse__div__blue__numberEntries--p2">seen products every day</p>
             </div>
@@ -56,41 +55,48 @@
             <div class="section__marketing__ellipse__div__green__box">
                 <div class="section__marketing__ellipse__div__green--ellipse3"></div>
                 <img class="section__marketing__ellipse__div__green__icon__box__icon" alt="Catalog Icon">
-            </div>
-            <div class="section__marketing__ellipse__div__green__numberEntries__box">
+                <br><br><br><br><br>
                 <p class="section__marketing__ellipse__div__green__numberEntries--p1">1 0 0 0 0 +</p>
                 <p class="section__marketing__ellipse__div__green__numberEntries--p2">added posts daily</p>
             </div>
         </div>
     </section>
 
-    <section>
-        <div class="first-frame">
+    <section class="section__advantages">
+        <div class="section__advantages__first__frame">
+            <img alt="Macbook image" src="resources\img\Macbook.png">
+            <div class="section__advantages__first__frame__ellipse"></div>
             <h2>Be always first</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
-            <img src="resources\img\Macbook.png" alt="Macbook image">
+
         </div>
-        <div class="second-frame">
+
+        </div>
+        <div class="section__advantages__second__frame">
+            <img src="resources\img\Iphone.png" alt="Iphone">
+            <div class="section__advantages__second__frame__ellipse"></div>
             <h2>Your shop is where you are!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
-            <img src="resources\img\Iphone.png" alt="Iphone">
+
         </div>
-        <div class="third-frame">
+
+
+        <div class="section__advantages__third__frame">
             <h2>Increase recognition your brand!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
-            <img src="resources\img\Trumpet.png" alt="Trumpet">
         </div>
-    </section>
-    <section>
-        <h2>Pricing</h2>
-        <article class="first-card">
+        <div class="section__advantages__third__frame__extension">
+            <img src="resources\img\Trumpet.png" alt="Trumpet">
+            <div class="section__advantages__third__frame__extension__rectangle"></div>
+        </div>
 
+    </section>
+    <section class="section__cards__pricing">
+        <h2>Pricing</h2>
+        <div class="section__cards__pricing__first-card">
             <h3>Basic</h3>
             <p>0$</p>
             <ul class="list">
@@ -101,50 +107,52 @@
                 <li>Full suport</li>
             </ul>
             <button>Begin</button>
-            </div>
-            <div class="second-card">
-                <h3>Professional</h3>
-                <p>$25</p>
-                <p>Limited offer</p>
-                <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>500MB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>2 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>5 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>One year license</p><img src="resources\svg\Cross.svg" alt="Cross Icon">
-                <p>Full suport</p>
-                <button>Begin</button>
-            </div>
-            <div class="third-card">
-                <h3>Premium</h3>
-                <p>$60</p>
-                <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>2GB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>5 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>20 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>Two years license</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-                <p>Full suport</p>
-                <button>Begin</button>
-            </div>
-            <div class="contact">
-                <h2>Any questions?</h2>
-                <p>Leave your email address or call us!</p>
-                <a href="mailto:info@bestshop.xyz">info@bestshop.xyz</a></p>
-                <a href="tel:123456789">123456789</a></p>
-                <form action="contact.html" method="post">
-                    <label for="name">Name:</label>
-                    <input type="text" name="name">
-                    <label for="email">E-mail:</label>
-                    <input type="email" name="email">
-                    <input type="checkbox">I hereby give consent for my personal data included in my application to be
-                    processed for the purposes of the recruitment process under the European Parliament’s and Council of
-                    the
-                    European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to
-                    the
-                    processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
-                    (Data Protection Directive)</checkbox>
-                    <button>Send</button>
-                </form>
-            </div>
+        </div>
+        <div class="section__cards__pricing--second-card">
+            <h3>Professional</h3>
+            <p>$25</p>
+            <p>Limited offer</p>
+            <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>500MB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>2 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>5 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>One year license</p><img src="resources\svg\Cross.svg" alt="Cross Icon">
+            <p>Full suport</p>
+            <button>Begin</button>
+        </div>
+        <div class="section__cards__pricing--third-card">
+            <h3>Premium</h3>
+            <p>$60</p>
+            <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>2GB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>5 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>20 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>Two years license</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+            <p>Full suport</p>
+            <button>Begin</button>
+        </div>
+    </section>
+    <section class="section__contact">
+        <div class="contact">
+            <h2>Any questions?</h2>
+            <p>Leave your email address or call us!</p>
+            <a href="mailto:info@bestshop.xyz">info@bestshop.xyz</a></p>
+            <a href="tel:123456789">123456789</a></p>
+            <form action="contact.html" method="post">
+                <label for="name">Name:</label>
+                <input type="text" name="name">
+                <label for="email">E-mail:</label>
+                <input type="email" name="email">
+                <input type="checkbox">I hereby give consent for my personal data included in my application to be
+                processed for the purposes of the recruitment process under the European Parliament’s and Council of
+                the
+                European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to
+                the
+                processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
+                (Data Protection Directive)</checkbox>
+                <button>Send</button>
+            </form>
+        </div>
     </section>
     <footer>
         <div class="footer-text">
