--- a/index.html
+++ b/index.html
@@ -98,38 +98,71 @@
         <h2>Pricing</h2>
         <div class="section__cards__pricing__first-card">
             <h3>Basic</h3>
-            <p>0$</p>
+            <p class="section__cards__pricing__first-card-pPrice">$0</p>
             <ul class="list">
-                <li>100MB HDD</li>
-                <li>1 subdomain</li>
-                <li>2 E-mails</li>
-                <li>Two years license</li>
-                <li>Full suport</li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>100 MB HDD</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>1 subdomain</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>2 E-mails</p>
+                </li>
+                <li><img src="resources\svg\Cross.svg" alt="Cross Icon">
+                    <p>Two years license</p>
+                </li>
+                <li><img src="resources\svg\Cross.svg" alt="Cross Icon">
+                    <p>Full suport</p>
+                </li>
             </ul>
-            <button>Begin</button>
+            <button class="section__cards__pricing__first-card__bt">Begin</button>
         </div>
-        <div class="section__cards__pricing--second-card">
+        <div class="section__cards__pricing__second-card">
             <h3>Professional</h3>
-            <p>$25</p>
-            <p>Limited offer</p>
-            <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>500MB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>2 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>5 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>One year license</p><img src="resources\svg\Cross.svg" alt="Cross Icon">
-            <p>Full suport</p>
-            <button>Begin</button>
+            <p class="section__cards__pricing__second-card__pPrice">$25</p>
+            <p class="section__cards__pricing__second-card__pLo">Limited offer</p>
+            <ul class="list">
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>500 MB HDD</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>2 subdomain</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>5 E-mails</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>One year license</p>
+                </li>
+                <li><img src="resources\svg\Cross.svg" alt="Cross Icon">
+                    <p>Full suport</p>
+                </li>
+            </ul>
+            <button class="section__cards__pricing__second-card__bt">Begin</button>
         </div>
-        <div class="section__cards__pricing--third-card">
+        <div class="section__cards__pricing__third-card">
             <h3>Premium</h3>
-            <p>$60</p>
-            <img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>2GB HDD</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>5 subdomains</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>20 E-mails</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>Two years license</p><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
-            <p>Full suport</p>
-            <button>Begin</button>
+            <p class="section__cards__pricing__third-card__pPrice">$60</p>
+            <p class="section__cards__pricing__third-card__pLo">Limited offer</p>
+            <ul class="list">
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>2 GB HDD</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>5 subdomain</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>20 E-mails</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>Two years license</p>
+                </li>
+                <li><img src="resources\svg\Checkbox.svg" alt="Checkbox Icon">
+                    <p>Full suport</p>
+                </li>
+            </ul>
+            <button class="section__cards__pricing__third-card__bt">Begin</button>
         </div>
     </section>
     <section class="section__contact">
@@ -150,7 +183,7 @@
                 the
                 processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
                 (Data Protection Directive)</checkbox>
-                <button>Send</button>
+                <button class="section__cards__pricing__third-card__bt">Send</button>
             </form>
         </div>
     </section>
