--- a/index.html
+++ b/index.html
@@ -167,33 +167,47 @@
         </div>
     </section>
     <section class="section__contact">
-        <div class="contact">
+        <div class="section__contact__div">
             <h2>Any questions?</h2>
             <p>Leave your email address or call us!</p>
-            <a href="mailto:info@bestshop.xyz">info@bestshop.xyz</a></p>
-            <a href="tel:123456789">123456789</a></p>
+            <a href="mailto:info@bestshop.xyz"><img src="resources/svg/MailIcon.svg" alt="Mail Icon">
+                <p>info@bestshop.xyz</p>
+            </a><br>
+            <a href="tel:123456789"><img src="resources/svg/PhoneIcon.svg" alt="Mail Icon">
+                <p>123456789</p>
+            </a>
             <form action="contact.html" method="post">
-                <label for="name">Name:</label>
+                <label for="name">N A M E:</label>
+                <br>
                 <input type="text" name="name">
-                <label for="email">E-mail:</label>
+                <br>
+                <label for="email">E M A I L:</label>
+                <br>
                 <input type="email" name="email">
-                <input type="checkbox">I hereby give consent for my personal data included in my application to be
-                processed for the purposes of the recruitment process under the European Parliament’s and Council of
-                the
-                European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to
-                the
-                processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
-                (Data Protection Directive)</checkbox>
-                <button class="section__cards__pricing__third-card__bt">Send</button>
+                <br>
+                <input type="checkbox">
+                <p class="section__contact__div__consent">I hereby give consent for my personal data included in my
+                    application to be
+                    processed for the purposes of the recruitment process under the European Parliament’s and Council of
+                    the
+                    European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to
+                    the
+                    processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
+                    (Data Protection Directive)</p>
+                </input><br>
+                <button class="section__contact__div__form__button">Send</button>
             </form>
         </div>
     </section>
+    <br>
     <footer>
         <div class="footer-text">
             <h2>OXYGEN Shop</h2>
-            <p>© 2022 OXYGEN, All Rights Reserved</p>
+            <p>© 2025 OXYGEN, All Rights Reserved</p>
             <img src="resources\img\Facebook.png" alt="Facebook Icon">
             <img src="resources\img\Twitter.png" alt="Twitter Icon">
+        </div>
+    </footer>
 
 </body>
 
