Started desktop version

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <button class="header__button__hamburger"><img src="resources\svg\Menu.svg" alt="Hamburger Menu"></button>
         <nav class="header__nav">
             <ul class="header__nav__list">
-                <li class="header__nav__list__list__item"><a href="#">Why us</a></li>
-                <li class="header__nav__list__list__item"><a href="#">Benefits</a></li>
-                <li class="header__nav__list__list__item"><a href="#">Prices</a></li>
-                <li class="header__nav__list__list__item"><a href="#">Contact</a></li>
+                <li class="header__nav__list__list__item"><a href="#">WHY US</a></li>
+                <li class="header__nav__list__list__item"><a href="#">BENEFITS</a></li>
+                <li class="header__nav__list__list__item"><a href="#">PRICES</a></li>
+                <li class="header__nav__list__list__item"><a href="#">CONTACT</a></li>
             </ul>
         </nav>
         <hr class="header__hr">
