Fixed header mobile mistake and done desktop header

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <button class="header__button__hamburger"><img src="resources\svg\Menu.svg" alt="Hamburger Menu"></button>
         <nav class="header__nav">
             <ul class="header__nav__list">
-                <li class="header__nav__list__list__item"><a href="#">WHY US</a></li>
-                <li class="header__nav__list__list__item"><a href="#">BENEFITS</a></li>
-                <li class="header__nav__list__list__item"><a href="#">PRICES</a></li>
-                <li class="header__nav__list__list__item"><a href="#">CONTACT</a></li>
+                <li class="header__nav__list__list__item"><a href="#">WHY US<span class="underline"></span></a></li>
+                <li class="header__nav__list__list__item"><a href="#">BENEFITS<span class="underline"></span></a></li>
+                <li class="header__nav__list__list__item"><a href="#">PRICES<span class="underline"></span></a></li>
+                <li class="header__nav__list__list__item"><a href="#">CONTACT<span class="underline"></span></a></li>
             </ul>
         </nav>
-        <hr class="header__hr">
+
     </header>
     <section class="section__marketing">
         <h1 class="section__marketing__h1">Sell More!</h1>
