--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             <div class="section__advantages__first__frame__ellipse"></div>
             <h2>Be always first</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
+                dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
+
         </div>
 
         </div>
@@ -81,7 +82,6 @@
             <h2>Your shop is where you are!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
         </div>
 
 
@@ -89,7 +89,6 @@
             <h2>Increase recognition your brand!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr>
         </div>
         <div class="section__advantages__third__frame__extension">
             <img src="resources\img\Trumpet.png" alt="Trumpet">
