Section form desktop done and other fixes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="section__marketing__ellipse__div__red--ellipse"></div>
                     <img class="section__marketing__ellipse__div__red__icon__box__icon" alt="Person Icon">
                     <br><br><br><br><br>
-                    <p class="section__marketing__ellipse__div__red__numberEntries--p1">1 0 0 0 0 0+</p>
+                    <p class="section__marketing__ellipse__div__red__numberEntries--p1">1 0 0 0 0 0 +</p>
                     <p class="section__marketing__ellipse__div__red__numberEntries--p2">daily entries</p>
                 </div>
             </div>
@@ -172,13 +172,15 @@
     <section class="section__contact">
         <div class="section__contact__div">
             <h2>Any questions?</h2>
-            <p>Leave your email address or call us!</p>
+            <p class="section__contact__div__p">Leave your email address or call us!</p>
             <a href="mailto:info@bestshop.xyz"><img src="resources/svg/MailIcon.svg" alt="Mail Icon">
                 <p>info@bestshop.xyz</p>
             </a><br>
             <a href="tel:123456789"><img src="resources/svg/PhoneIcon.svg" alt="Mail Icon">
                 <p>123456789</p>
             </a>
+        </div>
+        <div class="section__contact__div__form">
             <form action="contact.html" method="post">
                 <label for="name">N A M E:</label>
                 <br>
@@ -200,6 +202,7 @@
                 </input><br>
                 <button class="section__contact__div__form__button">Send</button>
             </form>
+        </div>
         </div>
     </section>
     <br>
