Progress bar done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 
 <body>
+
+    <div class="progress-bar">
+        <div class="progress-bar__line" id="progress-bar__line"></div>
+    </div>
     <script src="js\hamburgerMenu.js"></script>
+    <script src="js\progressBar.js"></script>
     <header class="header">
         <h1 class="header__logo">OXYGENShop</h1>
         <button class="header__button__hamburger" onclick=hamburgerMenuDisplay()><img src="resources\svg\Menu.svg"
