Button Return to the top done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <script src="js\hamburgerMenu.js"></script>
     <script src="js\progressBar.js"></script>
+    <script src="js\returnTop.js"></script>
     <header class="header">
         <h1 class="header__logo">OXYGENShop</h1>
         <button class="header__button__hamburger" onclick=hamburgerMenuDisplay()><img src="resources\svg\Menu.svg"
@@ -39,6 +40,11 @@
         </nav>
 
     </header>
+    <div class="return__top">
+        <button class="return__top__button" onclick="returnTop()">
+            <img src="resources\svg\topArrow.svg" alt="Arrow Up">
+        </button>
+    </div>
     <section class="section__marketing" id="section_marketing">
         <h1 class="section__marketing__h1">Sell More!</h1>
         <p class="section__marketing__p">Open shop on our platform and increase your sales.</p>
