Send data from testing API improved

--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
                 </input><br>
                 <button onclick="sendDataToAPI()" type="button" class="section__contact__div__form__button"
                     id="section__contact__div__form__button" disabled>Send</button>
+                <br>
+                <p class="section__contact__div__form__sentStatus" id="section__contact__div__form__sentStatus"></p>
             </form>
         </div>
         </div>
